--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>我的个人网站</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/muqiyanweb/styles.css">
 </head>
 <body>
     <header>
@@ -52,6 +52,6 @@
         <p>感谢你的访问！</p>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="/muqiyanweb/script.js"></script>
 </body>
 </html>
