--- a/index.html
+++ b/index.html
@@ -3,19 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>我的个人网站</title>
+    <title>慕淇燕的个人网站</title>
     <link rel="stylesheet" href="/muqiyanweb/styles.css">
 </head>
 <body>
     <header>
         <div class="container">
             <div id="branding">
-                <h1>我的个人网站</h1>
+                <h1>慕淇燕的个人网站</h1>
             </div>
             <nav>
                 <ul>
                     <li class="current"><a href="#about">关于我</a></li>
-                    <li><a href="#projects">我的项目</a></li>
+                    <li><a href="#education">教育经历</a></li>
+                    <li><a href="#awards">获奖情况</a></li>
                     <li><a href="#contact">联系我</a></li>
                 </ul>
             </nav>
@@ -23,28 +24,48 @@
     </header>
 
     <div class="main">
-        <section id="about">
-            <h2>关于我</h2>
-            <p>在这里写一些关于你自己的介绍。</p>
+        <section id="about" class="section">
+            <div class="section-content">
+                <h2>关于我</h2>
+                <p>我叫慕淇燕，来自贵州，是一名生态学专业的研究生，希望自己永远乐观向上，积极且勇敢。</p>
+            </div>
         </section>
 
-        <section id="projects">
-            <h2>我的项目</h2>
-            <ul>
-                <li>项目1：描述项目1的内容。</li>
-                <li>项目2：描述项目2的内容。</li>
-                <li>项目3：描述项目3的内容。</li>
-            </ul>
+        <section id="education" class="section">
+            <div class="section-content">
+                <h2>教育经历</h2>
+                <ul>
+                    <li>本科：三峡大学</li>
+                    <li>硕士：华中农业大学</li>
+                </ul>
+            </div>
         </section>
 
-        <section id="contact">
-            <h2>联系我</h2>
-            <p>你可以通过以下方式联系我：</p>
-            <ul>
-                <li>邮箱：<a href="mailto:your-email@example.com">your-email@example.com</a></li>
-                <li>LinkedIn：<a href="https://www.linkedin.com" target="_blank">我的LinkedIn</a></li>
-                <li>GitHub：<a href="https://www.github.com" target="_blank">我的GitHub</a></li>
-            </ul>
+        <section id="awards" class="section">
+            <div class="section-content">
+                <h2>获奖情况</h2>
+                <ul>
+                    <li>华中农业大学资源与环境学院优秀营员</li>
+                    <li>“校园十佳创业团队”</li>
+                    <li>全国大学生生命科学竞赛科学探究类省三等奖</li>
+                    <li>国家励志奖学金</li>
+                    <li>“互联网+”大学生创新创业大赛省级铜奖</li>
+                    <li>校三等奖学</li>
+                    <li>支教获 “优秀志愿者”和 “优秀支教老师”</li>
+                    <li>校“三好学生”</li>
+                    <li>校园征文大赛校级一等奖</li>
+                    <li>校园舞蹈团体赛校级一等奖</li>
+                </ul>
+            </div>
+        </section>
+
+        <section id="contact" class="section">
+            <div class="section-content">
+                <h2>联系我</h2>
+                <p>地址：华中农业大学</p>
+                <p>邮箱：<a href="mailto:1413710638@qq.com">1413710638@qq.com</a></p>
+                <p>电话：18083598326</p>
+            </div>
         </section>
     </div>
 
